# lalazai

./: QUICK_START.md  README.md  __init__.py  main.py  main_new.py  paper_arag.md  pyproject.toml  requirements.txt
api/v1/: recommendations.py
configs/: business_rules.yaml  evaluation_config.yaml  global_config.yaml  pipeline_config.yaml  prompts.yaml
configs/environments/: dev.yaml  prod.yaml
configs/pipelines/: v1_basic_rag.yaml  v2_rag_reflection.yaml
core_pipeline/: profiling.py
core_pipeline/recommendation/: ranker.py
data/connectors/: base.py
data/connectors/bloomberg/: connector.py  feature_builder.py  preprocessor.py
data/connectors/crm/: crm_connector.py
data/connectors/publications/: publications_connector.py
data/connectors/refinitiv/: connector.py  feature_builder.py  preprocessor.py
data/connectors/utils/: kyc_connector.py  readership_connector.py  rfq_connector.py
data/schemas/: __init__.py
docs/api/: README.md
evaluation/: README.md  __init__.py  base_evaluator.py  example_usage_enhanced.py  offline_evaluator.py
evaluation/evaluators/: __init__.py  connector_evaluators.py  factory.py  llm_evaluators.py  profile_evaluators.py  recommendation_evaluators.py
llm/clients/: base_client.py
llm/prompts/templates/: email_composition.txt  relevance_scoring.txt
llm_services/: prompt_manager.py
pipelines/: factory.py
pipelines/base/: orchestrator.py  pipeline.py  retriever.py
pipelines/utils/: email_generator.py
pipelines/v1_basic_rag/: pipeline.py
pipelines/v2_rag_reflection/: pipeline.py  reflection_agent.py
scripts/migration/: reorganize_project.py
scripts/utilities/: cli.py
